maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: ';' expected but '=' found.
        (sx,sy) =(x,y)
                ^