maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var (sx, sy) = trouveSortie()
}

def trouveSortie() : (Int,Int) = {
  var (sx,sy) :(Int,Int) = (0,0)
  for (x <- 0 to getMondeLargeur()-1){
  	for (y <- 0 to getMondeHauteur()-1){
      if (aBiscuit(x,y)) {
        (sx,sy) =(x,y)
        return (sx,sy)
      }
    }
  }
  //return (0,0)
}